tests/macros/order_select/default.rs
fn main() {
    requestty::questions![OrderSelect { default: todo!() }];
}
